--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button class="main__nav-button" title="Add task"><i class="fa-solid fa-plus main__nav-button-icon"></i></button>
                 
                 <!-- Campo de búsqueda de notas -->
-                <input type="text" placeholder="Hacer función de ordenar Search note..." id="main__nav-input" class="main__nav-input">
+                <input type="text" placeholder="Search note..." id="main__nav-input" class="main__nav-input">
 
                 <!-- Contenedor de la función para odernar -->
                  <div class="main__nav-container-order">
