--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="main__nav-container">
 
                 <!-- Botón para agregar nueva nota -->
-                <button class="main__nav-button" title="Add task"><i class="fa-solid fa-plus main__nav-button-icon"></i></button>
+                <button class="main__nav-button btnAddNote" title="Add task"><i class="fa-solid fa-plus main__nav-button-icon"></i></button>
                 
                 <!-- Campo de búsqueda de notas -->
                 <input type="text" placeholder="Search note..." id="main__nav-input" class="main__nav-input">
